[package]
name = "tdigest-ch"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_tdigest_ch"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.2"
serde_json = "1.0.125"
tdigest-ch = { git = "https://github.com/vivienm/rust-tdigest-ch.git", version = "0.1.0", features = ["serde"] }
