[project]
name = "tdigest-ch"
description = "A Python library for estimating quantiles in a stream, using ClickHouse t-digest data structure."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vivien Maisonneuve", email = "v.maisonneuve@gmail.com"},
]
dynamic = ["version"]
dependencies = []

[project.urls]
repository = "https://github.com/vivienm/python-tdigest-ch"
documentation = "https://vivienm.github.io/python-tdigest-ch/docs/"


[build-system]
requires = [
    "pdm-pep517",
    "setuptools-rust",
]
build-backend = "pdm.pep517.api"


[tool.pdm.build]
package-dir = "src"
setup-script = "build.py"
run-setuptools = true

[tool.pdm.dev-dependencies]
dev = [
    "furo>=2022.6.21",
    "mypy>=0.971",
    "nox>=2022.1.7",
    "pip-audit>=2.6.1",
    "pytest-benchmark>=3.4.1",
    "pytest>=7.1.2",
    "ruff>=0.0.152",
    "setuptools-rust>=1.4.1",
    "sphinx>=5.1.0",
    "tdigest>=0.5.2.2",
]

[tool.pdm.version]
source = "scm"


[tool.mypy]
strict = true
exclude = ["^build/"]

[[tool.mypy.overrides]]
module = [
    "pytest_benchmark.*",
    "tdigest.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "--doctest-modules --benchmark-skip"
testpaths = [
    "src",
    "tests",
]


[tool.ruff]
extend-select= [
  "I",  # isort
]
