[project]
name = "tdigest-ch"
version = "0.1.0"
description = "A Python library for estimating quantiles in a stream, using ClickHouse t-digest data structure"
authors = [
    { name = "Vivien Maisonneuve", email = "v.maisonneuve@gmail.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]

[project.urls]
Documentation = "https://vivienm.github.io/python-tdigest-ch"
Repository = "https://github.com/vivienm/python-tdigest-ch"
Issues = "https://github.com/vivienm/python-tdigest-ch/issues"

[build-system]
requires = ["maturin>=1.7.0"]
build-backend = "maturin"

[tool.uv]
dev-dependencies = [
    "furo>=2024.8.6",
    "mypy>=1.11.0",
    "nox>=2024.4.15",
    "pip-audit>=2.7.3",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.3.1",
    "ruff>=0.5.4",
    "sphinx>=8.0.2",
    "tdigest>=0.5.2.2",
]

[tool.maturin]
python-source = "python"
module-name = "tdigest_ch._lowlevel"
features = ["pyo3/extension-module"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "pytest_benchmark.*",
    "tdigest_ch._lowlevel",
    "tdigest.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select= [
    "I",  # isort
]
unfixable = [
    "F401",  # unused imports
]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--import-mode=importlib",
    "--benchmark-skip",
]
testpaths = [
    "src",
    "tests",
]
