[project]
name = "tdigest-ch"
version = "0.1.0"
description = "A Python library for estimating quantiles in a stream, using ClickHouse t-digest data structure"
readme = "README.md"
authors = [
    { name = "Vivien Maisonneuve", email = "v.maisonneuve@gmail.com" },
]
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Documentation = "https://vivienm.github.io/python-tdigest-ch"
Repository = "https://github.com/vivienm/python-tdigest-ch"
Issues = "https://github.com/vivienm/python-tdigest-ch/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "mypy>=1.11.0",
    "nox>=2024.4.15",
    "pip-audit>=2.7.3",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.3.1",
    "ruff>=0.5.4",
    "sphinx>=8.0.2",
    "tdigest>=0.5.2.2",
    "typos>=1.30.0",
]

[tool.uv]
cache-keys = [
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "src/**/*.rs" },
]

[tool.maturin]
python-source = "python"
module-name = "tdigest_ch._core"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "pytest_benchmark.*",
    "tdigest_ch._core",
    "tdigest.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select= [
    "I",  # isort
    "RUF",  # Ruff
]
unfixable = [
    "F401",  # unused imports
]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--import-mode=importlib",
    "--benchmark-skip",
]
testpaths = [
    "src",
    "tests",
]
filterwarnings = [
    "error",
]
