[package]
name = "tdigest-ch-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tdigest-ch = { git = "https://github.com/vivienm/rust-tdigest-ch.git", version = "0.1.0", features = ["serde"] }
pyo3 = { version = "0.17.0", features = ["extension-module"] }
serde_json = "1.0.82"

[lib]
name = "tdigest_ch_rust"
crate-type = ["cdylib"]
